--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~15.0.0",
     "@angular/core": "~15.0.0",
     "@angular/forms": "~15.0.0",
+    "@angular/localize": "~13.3.0",
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
@@ -24,6 +25,7 @@
     "@nestjs/core": "^9.2.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@nrwl/angular": "^15.2.1",
     "@popperjs/core": "^2.10.2",
     "bcrypt": "^5.1.0",
